zokrates_cli/examples/compile_errors/assembly/variable_index_assignment.zok
def main(field[2] mut a, u32 i) -> field[2] {
   asm {
      a[i] <== 42; // assigning to a variable index is not allowed in assembly
   }
   return a;
}